--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ let finEnDias = new Date(fechaFin)
 document.getElementById("li1").innerHTML = "Fecha de inicio: " + inicioEnDias
         document.getElementById("li2").innerHTML = "Fecha de hoy: " + finEnDias
         document.getElementById("li3").innerHTML = "Cantidad de dias: "+ parseInt(((fechaFin - fechaInicio))/(1000*60*60*24))
-        document.getElementById("li4").innerHTML = "Cantidad de meses: "+parseInt(((fechaFin - fechaInicio))/(1000*60*60*24))/30
+        document.getElementById("li4").innerHTML = "Cantidad de meses: "+parseInt(((fechaFin - fechaInicio))/(1000*60*60*24)/30)
 
 }
 </script>
