--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     Información:
                     <ul>
                         <li id="li4" style="color:yellow">cantidad de meses: </li>
-
+                        <li id="li5" style="color:yellow">cantidad de meses: </li>
                         <li id="li1">Fecha de inicio: </li>
                         <li id="li2">Fecha de hoy: </li>
                         <li id="li3">Cantidad en dias: </li>
@@ -107,6 +107,7 @@
 
         let inicioEnDias = new Date(fechaInicio)
         let finEnDias = new Date(fechaFin)
+        document.getElementById("li5").innerHTML = "Cantidad de años: " + monthDiff(new Date('2021-07-02'), new Date())/12
         document.getElementById("li1").innerHTML = "Fecha de inicio: " + inicioEnDias
         document.getElementById("li2").innerHTML = "Fecha de hoy: " + finEnDias
         document.getElementById("li3").innerHTML = "Cantidad de dias: " + parseInt(((fechaFin - fechaInicio)) / (1000 * 60 * 60 * 24))
