--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
             left: 0;
             padding-bottom: 5%
         }
+        .img-center {margin:0 auto;}
+        .img-responsive {margin:0 auto;
+        margin-left: 30px;}
     </style>
 </head>
 
@@ -71,7 +74,7 @@
                 </div>
             </div>
             <div class="col">
-                <img src="./images/foto-nos.jpg" alt="foto con normi" height="400px">
+                <img src="./images/foto-nos.jpg" class="img-responsive img-center" alt="foto con normi" height="400px">
             </div>
         </div>
     </div>
