--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
+        .feedback {
+  background-color : #31B0D5;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-color: #46b8da;
+}
+
+#mybutton {
+  position: fixed;
+  bottom: -4px;
+  right: 10px;
+}
         body {
             background-color: black;
         }
@@ -54,6 +67,8 @@
 </head>
 
 <body>
+    
+
     <img src="https://thumbs.dreamstime.com/b/dise%C3%B1o-de-logotipo-letra-nye-sobre-fondo-negro-concepto-del-la-original-creativa-l%C3%A1piz-241007260.jpg"
         alt="" width="10%">
     <div class="container">
@@ -87,7 +102,10 @@
     <div class="footer">Hecho con amor para <strong>Normis y Estebitan</strong>
         <div class="br">Por Esteban</div>
     </div>
-
+    <div id="mybutton">
+        <a href="https://contacto-alpha.vercel.app" target="_blank">
+          <button class="feedback">Contacto</button></a>
+      </div>
 </body>
 <script>
 
