--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 
         let inicioEnDias = new Date(fechaInicio)
         let finEnDias = new Date(fechaFin)
-        document.getElementById("li5").innerHTML = "Cantidad de años: " + monthDiff(new Date('2021-07-02'), new Date())/12
+        document.getElementById("li5").innerHTML = "Cantidad de años: " + monthDiff(inicioEnDias, new Date())/12
         document.getElementById("li1").innerHTML = "Fecha de inicio: " + inicioEnDias
         document.getElementById("li2").innerHTML = "Fecha de hoy: " + finEnDias
         document.getElementById("li3").innerHTML = "Cantidad de dias: " + parseInt(((fechaFin - fechaInicio)) / (1000 * 60 * 60 * 24))
-        document.getElementById("li4").innerHTML = "Cantidad de meses: " + monthDiff(new Date('2021-07-02'), new Date())
+        document.getElementById("li4").innerHTML = "Cantidad de meses: " + monthDiff(inicioEnDias, new Date())
 
     }
     function monthDiff(dateFrom, dateTo) { return dateTo.getMonth() - dateFrom.getMonth() + (12 * (dateTo.getFullYear() - dateFrom.getFullYear())) }
